--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "react-scripts": "4.0.1",
     "web-vitals": "^0.2.4"
   },
-  "author" : "Roman Sergichev",
+  "author": "Roman Sergichev",
   "description": "Фронтент проекта Место на React",
   "scripts": {
     "start": "react-scripts start",
@@ -38,6 +38,7 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^3.1.0"
+    "gh-pages": "^3.1.0",
+    "react-router-dom": "^5.2.0"
   }
 }
